--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="tap-button">
           <button id="tap-button">
-            <img src="path/to/your/button-image.png" alt="Tap Button" />
+            <img src="coin.png" alt="Tap Button" />
           </button>
         </div>
         <div class="claim-section">
